--- a/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
@@ -173,7 +173,7 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
-                          {% elseif post.cosmo_bonus == 'ec' %}
+                          {% elseif cosmo.cosmo_bonus == 'ec' %}
                             Efeito de crítico físico +5%
                           {% endif %}
                         </span>
@@ -280,7 +280,7 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
-                          {% elseif post.cosmo_bonus == 'ec' %}
+                          {% elseif cosmo.cosmo_bonus == 'ec' %}
                             Efeito de crítico físico +5%
                           {% endif %}
                         </span>
@@ -387,7 +387,7 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
-                          {% elseif post.cosmo_bonus == 'ec' %}
+                          {% elseif cosmo.cosmo_bonus == 'ec' %}
                             Efeito de crítico físico +5%
                           {% endif %}
                         </span>
@@ -494,7 +494,7 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
-                          {% elseif post.cosmo_bonus == 'ec' %}
+                          {% elseif cosmo.cosmo_bonus == 'ec' %}
                             Efeito de crítico físico +5%
                           {% endif %}
                         </span>
